--- a/podCapsule/Scenes/PodcastDetails/View/PodcastDetailsVC.xib
+++ b/podCapsule/Scenes/PodcastDetails/View/PodcastDetailsVC.xib
@@ -1,22 +1,156 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PodcastDetailsVC" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PodcastDetailsVC" customModule="podCapsule" customModuleProvider="target">
             <connections>
+                <outlet property="descriptionTextView" destination="QV4-xf-Xhx" id="Lsd-Db-diL"/>
+                <outlet property="episodesNumberLabel" destination="Flk-OI-ddO" id="tXi-qZ-ovY"/>
+                <outlet property="episodesTableView" destination="TjF-EU-xxy" id="DeT-1J-zgR"/>
+                <outlet property="podcastPosterImageView" destination="zS4-Pi-Y52" id="oXy-Sf-goq"/>
+                <outlet property="podcastPosterShadowView" destination="D98-Yv-sCJ" id="KZz-ji-eU9"/>
+                <outlet property="podcastTitleLabel" destination="AEb-gX-jS2" id="KDh-GQ-Tck"/>
+                <outlet property="publisherNameLabel" destination="DPq-fX-TFY" id="OaA-kL-1qE"/>
+                <outlet property="scrollView" destination="mfU-om-G2B" id="0SA-Wa-GYc"/>
+                <outlet property="scrollViewHeightConstraint" destination="61F-Ku-dbb" id="Eyf-Rc-d2N"/>
+                <outlet property="topView" destination="190-iE-dNE" id="VtH-Mq-BMc"/>
+                <outlet property="topViewHeightConstraint" destination="ilE-Yo-uIe" id="h2u-wg-TfK"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5tt-KT-MCW">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mfU-om-G2B">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="1525"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="190-iE-dNE" userLabel="TopView">
+                                    <rect key="frame" x="15" y="0.0" width="384" height="624"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Star Wars 7x7: The Daily Star Wars Podcast" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AEb-gX-jS2">
+                                            <rect key="frame" x="40" y="270" width="304" height="48"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                            <color key="textColor" red="0.25464424778547723" green="0.29929920861478454" blue="0.30212960025380708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                            <color key="shadowColor" red="0.22897426260000001" green="0.26912767980000002" blue="0.27167274749999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <size key="shadowOffset" width="1" height="0.0"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D98-Yv-sCJ" userLabel="posterShadowView">
+                                            <rect key="frame" x="92" y="40" width="200" height="200"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zS4-Pi-Y52">
+                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="zS4-Pi-Y52" secondAttribute="bottom" id="BOZ-rx-egl"/>
+                                                <constraint firstItem="zS4-Pi-Y52" firstAttribute="leading" secondItem="D98-Yv-sCJ" secondAttribute="leading" id="LYV-QO-wDI"/>
+                                                <constraint firstItem="zS4-Pi-Y52" firstAttribute="top" secondItem="D98-Yv-sCJ" secondAttribute="top" id="NLO-Wr-IZM"/>
+                                                <constraint firstAttribute="trailing" secondItem="zS4-Pi-Y52" secondAttribute="trailing" id="ZfJ-yf-Gb4"/>
+                                                <constraint firstAttribute="height" constant="200" id="fac-aw-oLo"/>
+                                                <constraint firstAttribute="width" constant="200" id="tb1-Gz-zmQ"/>
+                                            </constraints>
+                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John F kenedy" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DPq-fX-TFY">
+                                            <rect key="frame" x="25" y="333" width="334" height="21.5"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
+                                            <color key="textColor" red="0.21186093910000001" green="0.2490133273" blue="0.25136817890000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                            <color key="shadowColor" red="0.2546442478" green="0.29929920859999998" blue="0.30212960030000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <size key="shadowOffset" width="1" height="0.0"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="52 - Episodes" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Flk-OI-ddO">
+                                            <rect key="frame" x="40" y="369.5" width="304" height="25"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="25" id="ZCi-xb-9V9"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                                            <color key="textColor" red="0.21186093910000001" green="0.2490133273" blue="0.25136817890000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                            <color key="shadowColor" red="0.2546442478" green="0.29929920859999998" blue="0.30212960030000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <size key="shadowOffset" width="1" height="0.0"/>
+                                        </label>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QV4-xf-Xhx">
+                                            <rect key="frame" x="15" y="409.5" width="354" height="194.5"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <color key="textColor" red="0.46192893401015234" green="0.46192893401015234" blue="0.46192893401015234" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstItem="D98-Yv-sCJ" firstAttribute="centerX" secondItem="AEb-gX-jS2" secondAttribute="centerX" id="4Sb-MZ-8jP"/>
+                                        <constraint firstItem="QV4-xf-Xhx" firstAttribute="leading" secondItem="190-iE-dNE" secondAttribute="leading" constant="15" id="8nd-qr-Bco"/>
+                                        <constraint firstAttribute="trailing" secondItem="DPq-fX-TFY" secondAttribute="trailing" constant="25" id="D3L-LQ-aVk"/>
+                                        <constraint firstItem="AEb-gX-jS2" firstAttribute="leading" secondItem="190-iE-dNE" secondAttribute="leading" constant="40" id="Ffy-Qa-iYU"/>
+                                        <constraint firstItem="QV4-xf-Xhx" firstAttribute="top" secondItem="Flk-OI-ddO" secondAttribute="bottom" constant="15" id="Jou-zw-9Mh"/>
+                                        <constraint firstAttribute="trailing" secondItem="AEb-gX-jS2" secondAttribute="trailing" constant="40" id="RDc-Xv-FNO"/>
+                                        <constraint firstAttribute="trailing" secondItem="QV4-xf-Xhx" secondAttribute="trailing" constant="15" id="Vbe-eN-hd3"/>
+                                        <constraint firstItem="Flk-OI-ddO" firstAttribute="leading" secondItem="190-iE-dNE" secondAttribute="leading" constant="40" id="ceu-JA-oeL"/>
+                                        <constraint firstItem="D98-Yv-sCJ" firstAttribute="top" secondItem="190-iE-dNE" secondAttribute="top" constant="40" id="fZG-hs-fQY"/>
+                                        <constraint firstAttribute="bottom" secondItem="QV4-xf-Xhx" secondAttribute="bottom" constant="20" id="gEF-6n-kMQ"/>
+                                        <constraint firstItem="AEb-gX-jS2" firstAttribute="top" secondItem="D98-Yv-sCJ" secondAttribute="bottom" constant="30" id="gyK-Tz-6sC"/>
+                                        <constraint firstAttribute="height" constant="624" id="ilE-Yo-uIe"/>
+                                        <constraint firstItem="DPq-fX-TFY" firstAttribute="top" secondItem="AEb-gX-jS2" secondAttribute="bottom" constant="15" id="oIZ-cw-IeJ"/>
+                                        <constraint firstItem="DPq-fX-TFY" firstAttribute="leading" secondItem="190-iE-dNE" secondAttribute="leading" constant="25" id="xYH-vI-I3U"/>
+                                        <constraint firstAttribute="trailing" secondItem="Flk-OI-ddO" secondAttribute="trailing" constant="40" id="y6i-Kt-uq9"/>
+                                        <constraint firstItem="Flk-OI-ddO" firstAttribute="top" secondItem="DPq-fX-TFY" secondAttribute="bottom" constant="15" id="zG2-NA-caX"/>
+                                    </constraints>
+                                </view>
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TjF-EU-xxy">
+                                    <rect key="frame" x="10" y="649" width="394" height="830"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                </tableView>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1525" id="61F-Ku-dbb"/>
+                                <constraint firstItem="190-iE-dNE" firstAttribute="leading" secondItem="mfU-om-G2B" secondAttribute="leading" constant="15" id="Ffv-uk-E84"/>
+                                <constraint firstAttribute="bottom" secondItem="TjF-EU-xxy" secondAttribute="bottom" constant="46" id="Ibs-11-AkG"/>
+                                <constraint firstItem="TjF-EU-xxy" firstAttribute="top" secondItem="190-iE-dNE" secondAttribute="bottom" constant="25" id="N7q-Fu-LH1"/>
+                                <constraint firstItem="190-iE-dNE" firstAttribute="top" secondItem="mfU-om-G2B" secondAttribute="top" id="XW2-P8-3WZ"/>
+                                <constraint firstAttribute="trailing" secondItem="TjF-EU-xxy" secondAttribute="trailing" constant="10" id="cLJ-eT-Tmo"/>
+                                <constraint firstAttribute="trailing" secondItem="190-iE-dNE" secondAttribute="trailing" constant="15" id="ctv-wU-Wre"/>
+                                <constraint firstItem="TjF-EU-xxy" firstAttribute="leading" secondItem="mfU-om-G2B" secondAttribute="leading" constant="10" id="poA-G2-d8H"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="mfU-om-G2B" firstAttribute="leading" secondItem="5tt-KT-MCW" secondAttribute="leading" id="FkS-rE-3Uv"/>
+                        <constraint firstAttribute="bottom" secondItem="mfU-om-G2B" secondAttribute="bottom" id="GZd-Tm-fah"/>
+                        <constraint firstAttribute="trailing" secondItem="mfU-om-G2B" secondAttribute="trailing" id="WPt-L7-hZB"/>
+                        <constraint firstItem="mfU-om-G2B" firstAttribute="top" secondItem="5tt-KT-MCW" secondAttribute="top" id="iFb-zB-Gyf"/>
+                        <constraint firstItem="mfU-om-G2B" firstAttribute="centerX" secondItem="5tt-KT-MCW" secondAttribute="centerX" id="noo-Jl-CoW"/>
+                    </constraints>
+                </scrollView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="5tt-KT-MCW" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="T4V-Cq-evp"/>
+                <constraint firstItem="5tt-KT-MCW" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="UT3-uT-oHd"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="5tt-KT-MCW" secondAttribute="trailing" id="eKA-XF-2hE"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="5tt-KT-MCW" secondAttribute="bottom" id="pkm-1U-6bu"/>
+            </constraints>
+            <point key="canvasLocation" x="-1229" y="29"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
